fix aligncenter

--- a/assets/styles/components/_wp-classes.scss
+++ b/assets/styles/components/_wp-classes.scss
@@ -10,6 +10,8 @@
 
 .aligncenter {
     display: block;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
 }
 
